--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,29 @@
+attrs==22.1.0
 black==22.6.0
 cffi==1.15.1
 click==8.1.3
 colorama==0.4.5
+coverage==6.4.4
 cryptography==37.0.4
 dnspython==2.2.1
 Flask==2.2.2
 Flask-PyMongo==2.3.0
 flask-swagger-ui==4.11.1
+iniconfig==1.1.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
 mypy-extensions==0.4.3
+packaging==21.3
 pathspec==0.9.0
 platformdirs==2.5.2
+pluggy==1.0.0
+py==1.11.0
 pycparser==2.21
 pymongo==4.2.0
+pyparsing==3.0.9
+pytest==7.1.2
+pytest-cov==3.0.0
 python-dotenv==0.20.0
 tomli==2.0.1
 Werkzeug==2.2.2
